--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="en">
     <head lang="en">
         <meta charset="UTF-8" />
-        <title>KuvaSivusto</title>
+        <title>KuvaSivusto</title>'
+        <!-- Bootstrap -->
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" 
+              rel="stylesheet" 
+              integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" 
+              crossorigin="anonymous"/>
     </head>
     <body>
         <h1>Main page</h1>
@@ -23,5 +24,13 @@ and open the template in the editor.
                 <li><img width="300" th:src="@{/pictures/{id}/content(id=${picture.id})}"/></li>
             </ul>
         </div>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" 
+                integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" 
+                crossorigin="anonymous">
+        </script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" 
+                integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" 
+                crossorigin="anonymous">
+        </script>   
     </body>
 </html>
